--- a/package.json
+++ b/package.json
@@ -15,6 +15,21 @@
   },
   "devDependencies": {
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2"
-  }
+    "eslint-config-next": "12.2.2",
+    "prisma": "^4.0.0",
+    "tailwindcss": "^3.1.6"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Claiirou/project-insta.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Claiirou/project-insta/issues"
+  },
+  "homepage": "https://github.com/Claiirou/project-insta#readme"
 }
